--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Effective Solutions
     for Your Business</title>
@@ -83,6 +87,41 @@
         
     </li>
 </ul>
+</section>
+<section>
+    <h2>Our Portfolio</h2>
+    <ul>
+        <li>
+            <img src="./images/banking.jpg" alt="banking" width="360" height="300"/>
+                <h3>Banking App</h3>
+                <p>App</p>
+        </li>
+        <li>
+            <img src="./images/cashless.jpg" alt="cashless" width="360" height="300"/>
+                <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+        </li>
+        <li>
+            <img src="./images/Meditation.jpg" alt="Meditation" width="360" height="300"/>
+                <h3>Meditation App</h3>
+                <p>App</p>
+        </li>
+        <li>
+            <img src="./images/taxi.jpg" alt="taxi" width="360" height="300"/>
+                <h3>Taxi Service</h3>
+                <p>Marketing</p>
+        </li>
+        <li>
+            <img src="./images/screen.jpg" alt="screen" width="360" height="300"/>
+                <h3>Screen Illustrations</h3>
+                <p>Design</p>
+        </li>
+        <li>
+            <img src="./images/online.jpg" alt="online" width="360" height="300"/>
+                <h3>Online Courses</h3>
+                <p>Marketing</p>
+        </li>
+    </ul>
 </section>
     </main>
     
