--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </main>
     
     <footer class="page-footer">
-            <a class="header-logo" href="./index.html">Web<span class="logo-text">Studio</span></a>
+            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-text">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
