--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="page-header">
       <nav>
         <a class="header-logo" href="./index.html"
-          ><span class="logo-text">Web</span>Studio</a
+          >Web<span class="logo-text">Studio</span></a
         >
         <ul class="header-menu-list">
           <li class="header-menu-item">
@@ -90,28 +90,28 @@
         <ul class="team-list">
           <li class="team-item">
             <img src="./images/img3.jpg" alt="img3" width="264" height="260" />
-            <h3 class="team-title">Mark Guerrero</h3>
+            <h3 class="team-subsubtitle">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
           <li class="team-item">
             <img src="./images/img2.jpg" alt="img2" width="264" height="260" />
-            <h3 class="team-title">Tom Ford</h3>
+            <h3 class="team-subtitle">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img src="./images/img1.jpg" alt="img1" width="264" height="260" />
-            <h3 class="team-title">Camila Garcia</h3>
+            <h3 class="team-subtitle">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
           <li class="team-item">
             <img src="./images/img.jpg" alt="img" width="264" height="260" />
-            <h3 class="team-title">Daniel Wilson</h3>
+            <h3 class="team-subtitle">Daniel Wilson</h3>
             <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section class="portfolio">
-        <h2>Our Portfolio</h2>
+      <section class="portfolio-first">
+        <h2 class="portfolio-our">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <img
@@ -174,7 +174,7 @@
 
     <footer class="page-footer">
       <a class="footer-logo" href="./index.html"
-        ><span class="footer-logo-text">Web</span>Studio</a
+        >Web<span class="footer-logo-text">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
