--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <ul class="team-list">
           <li class="team-item">
             <img src="./images/img3.jpg" alt="img3" width="264" height="260" />
-            <h3 class="team-subsubtitle">Mark Guerrero</h3>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
           <li class="team-item">
